		~/Downloads/flexpath/flexpath_adios_1_12_gnu_mvapich_tauperl chaos_bootstrap.pl adios-1.12 $HOME/envs/Flexpath_gcc_mvapich_tau &> config.lifen.log
	raw_dspacesraw_gcc_mvapich
----------------------------------------------------------------------------------
----------------------------------------------------------------------------------
## Jan 8
	* results:
	decaf 256v128 86.36s, 8 procs per link node
	* TODO build decaf using TAU

## Dec 12
	fixed:
		adios staging longer analysis time: 

## Dec 1
	now updated 64v32 diagram

## Nov 30 use dependency list

## Nov 28
#### Note
	- 28v14 using two server procs, seg fault in server
	- 64v32 max rss is  105G, producer max page fault 166k, consumer 153k
	- 196v98 max rss is 131G, producer max fault is 263k, consumer max page fault 505k
	

	create seperate fork
	Q: large memory use:
		1. tools to detect
		2. clog dynamic?
		3. use LM

## Oct 22
	don't laod default tau module in bridges,
	added trace support for simonly
## Oct 20
	https://github.iu.edu/IUPUI-CS-HPC/data_broker_lammps/wiki/compile&linking

tau with adios and dataspaces
	now use old version in 
	$ENV{WORK}/envs/Dataspacesroot_tau, install from
	/home/fli5/Downloads/dataspaces/dataspaces-1.6.2-gcc-mvapich-tau
	$ENV{WORK}/envs/backup/ADIOSroot_tau_1.11

## Oct 10
	build flexpath
## Oct 8
	impi works, using bridges default, use intel packages for all softwares
	i can also use more processes pernode
	all scripts/CMakeLists use new path with _intel

## Oct 14
	https://software.intel.com/en-us/forums/intel-clusters-and-hpc-technology/topic/702213

	
## Oct 2
#### fixing:
	1. comment out dataspaces locktype specification in adios_staging, as it
	does in adios staging example. (then type 1 lock will be used)
	2. use 2-d dimesions as in native dspaces?
	3. add timeout for adios_read_open, reader applications will try multiple
	times until stream is available.

	adios_dspaces with 1 server process: 230s
	adios_dimes with 1 server process: 155.54s
#### changed: