@@ -13,6 +13,7 @@ elseif(CMAKE_BUILD_TYPE MATCHES Stampede)
   set(LAMMPS_INCLUDE_DIR "/work/04446/tg837458/stampede2/software/lammps-16Feb16/src" CACHE PATH "lammps include path")
   set(LAMMPS_LIBRARY "/work/04446/tg837458/stampede2/software/lammps-16Feb16-lib/src/liblammps.so" CACHE PATH "lammps library path")
   set(LAMMPS_LIBRARY_STATIC "/work/04446/tg837458/stampede2/software/lammps-16Feb16-lib/src/static_libs_feng/liblammps.a" CACHE PATH "lammps library path")
+  set(DECAF_PREFIX "$ENV{WORK}/software/install" CACHE PATH "decaf path")
 
 elseif(CMAKE_BUILD_TYPE MATCHES Deb_Stam)
   message("-- ${CMAKE_CURRENT_SOURCE_DIR} > Stampede debug  build")
@@ -23,22 +24,30 @@ elseif(CMAKE_BUILD_TYPE MATCHES Deb_Stam)
   set(LAMMPS_INCLUDE_DIR "/work/04446/tg837458/stampede2/software/lammps-16Feb16/src" CACHE PATH "lammps include path")
   set(LAMMPS_LIBRARY "/work/04446/tg837458/stampede2/software/lammps-16Feb16-lib/src/liblammps.so" CACHE PATH "lammps library path")
   set(LAMMPS_LIBRARY_STATIC "/work/04446/tg837458/stampede2/software/lammps-16Feb16-lib/src/static_libs_feng/liblammps.a" CACHE PATH "lammps library path")
+  set(DECAF_PREFIX "$ENV{WORK}/software/install" CACHE PATH "decaf path")
 
 
 elseif(CMAKE_BUILD_TYPE MATCHES Stampede_TAU)
   message("-- ${CMAKE_CURRENT_SOURCE_DIR} > Stampede instructed build")
   set(TRANSPORT_LIB "$ENV{WORK}/envs/transports_icc_impi_tau" CACHE PATH "The path to transport libs.")
 
-elseif(CMAKE_BUILD_TYPE MATCHES Bridges)
+elseif(CMAKE_BUILD_TYPE STREQUAL Bridges)
   message("-- ${CMAKE_CURRENT_SOURCE_DIR} > Bridges uninstructed build")
   set(TRANSPORT_LIB "$ENV{WORK}/envs/gcc_mvapich" CACHE PATH "The path to transport libs")
   set(CMAKE_C_FLAGS "-O3 -fPIC ${ADD_FLAGS}" CACHE STRING "cflags")
   set(CMAKE_CXX_FLAGS "-O3 -fPIC ${ADD_FLAGS}" CACHE STRING "cxxflags")
   set(BOOST_ROOT "$ENV{WORK}/software/install" CACHE PATH "Boost path")
+  set(DECAF_PREFIX "$ENV{WORK}/software/install" CACHE PATH "decaf path")
 
-elseif(CMAKE_BUILD_TYPE MATCHES Bridges_TAU)
+elseif(CMAKE_BUILD_TYPE STREQUAL Bridges_TAU)
   message("-- ${CMAKE_CURRENT_SOURCE_DIR} > Bridges instructed build with tau")
-  set(TRANSPORT_LIB "$ENV{WORK}/envs/tau_bundle" CACHE PATH "The path to transport libs")
+  set(CMAKE_C_COMPILER  tau_cc.sh)
+  set(CMAKE_CXX_COMPILER  tau_cxx.sh)
+  set(TRANSPORT_LIB "$ENV{WORK}/envs/gcc_mvapich" CACHE PATH "The path to transport libs")
+  set(CMAKE_C_FLAGS "-fPIC ${ADD_FLAGS}" CACHE STRING "cflags")
+  set(CMAKE_CXX_FLAGS "-fPIC ${ADD_FLAGS}" CACHE STRING "cxxflags")
+  set(BOOST_ROOT "$ENV{WORK}/software/install" CACHE PATH "Boost path")
+  set(DECAF_PREFIX "$ENV{WORK}/software/install_tau" CACHE PATH "decaf path")
 
 else()
     message(FATAL_ERROR "-- need build type")
