@@ -1,3 +1,10 @@
+## Jan 9
+2160103
+    256v128 not work anymore?, stoped at 1 step
+    configuration files not correct
+    
+2160088
+    32v16 decaf with traces in bridges
 ## Jan 8
 JOBS
 
