@@ -1,0 +1,39 @@
+#!/bin/bash
+#SBATCH --job-name="adios_flexpath_nokeep"
+#SBATCH --output="results/%j.out"
+#SBATCH --partition=RM
+#SBATCH --nodes=3
+#SBATCH --ntasks-per-node=28
+#SBATCH -t 00:2:00
+#SBATCH --export=ALL
+
+#SBATCH --mail-type=BEGIN
+# send mail to this address
+#SBATCH --mail-user=lifen@iupui.edu
+
+#This job runs with 2 nodes, 24 cores per node for a total of 48 cores.
+#ibrun in verbose mode will give binding detail ##################parameter setting#################
+CASE_NAME=flexpath_nokeep
+FILESIZE2PRODUCE=256 # 64*64*256*2*8 = 16MB per proc
+NSTOP=10 # how many steps
+
+# procs placement
+num_apps=2
+
+# slots used by this app
+procs_this_app=(32 16)
+
+# number of nodes used by this app
+nodes_this_app=(2 1)
+
+
+PBS_O_HOME=$HOME
+PBS_O_WORKDIR=$(pwd)
+export SCRATCH_DIR=${SCRATCH}/data_broker_adios/${SLURM_JOBID}
+
+export WORK=$HOME
+export MyTransport=ADIOS_STAGING_FLEXPATH
+
+source ${PBS_O_WORKDIR}/scripts/adios_staging.sh
+
+
