@@ -1,0 +1,32 @@
+#!/bin/bash
+#SBATCH --job-name="decaf_lbm"
+#SBATCH --output="results/%j.out"
+#SBATCH --partition=RM
+#SBATCH --nodes=4
+#SBATCH --ntasks-per-node=28
+#SBATCH -t 00:8:00
+#SBATCH --export=ALL
+
+#SBATCH --mail-type=BEGIN
+# send mail to this address
+#SBATCH --mail-user=lifen@iupui.edu
+
+# procs placement
+num_apps=3
+
+# slots used by this app
+procs_this_app=(32 8 16)
+
+# number of nodes used by this app
+nodes_this_app=(2 1 1)
+
+
+PBS_O_HOME=$HOME
+PBS_O_WORKDIR=$(pwd)
+export SCRATCH_DIR=${SCRATCH}/decaf_skel/${SLURM_JOBID}
+
+source ${PBS_O_WORKDIR}/scripts/decaf.sh
+
+
+
+
